# setta

./: .flake8  .gitignore  FEATURES.md  LICENSE  MANIFEST.in  README.md  activate.sh  build.sh  build_and_upload.sh  cleanup.sh  dev_install.sh  format_code.sh  init_env.sh  modify.py  package.json  pnpm-lock.yaml  setup.cfg  test_install.sh
backend/setta/: __init__.py  server.py  start.py
backend/setta/cli/: __init__.py  connect.py  logger.py
backend/setta/code_gen/: create_runnable_scripts.py  export_selected.py  find_placeholders.py  utils.py
backend/setta/code_gen/python/: ast_utils.py  check_scope.py  generate_code.py  make_parseable.py  position_line_col.py  validate_imports.py
backend/setta/code_gen/yaml/: generate_yaml.py  section_dict.py
backend/setta/database/: backup.py  db_init.py  db_objs.py  db_path.py  import_db.py  seed.py  settings_file.py  utils.py
backend/setta/database/export_db/: export_db.py  export_raw.py  export_readable.py  utils.py
backend/setta/lsp/: file_watcher.py  reader.py  server.py  specific_file_watcher.py  utils.py  writer.py
backend/setta/lsp/reader_fns/: completion.py  definition.py  diagnostics.py  documentHighlight.py  references.py  signatureHelp.py
backend/setta/routers/: __init__.py  api_specs.py  artifact.py  code_info.py  dependencies.py  in_memory_fn_stdout_websocket.py  interactive.py  lsp.py  projects.py  reference_renaming.py  sections.py  settings.py  terminals.py  websocket.py
backend/setta/tasks/: task_runner.py  tasks.py  utils.py
backend/setta/tasks/fns/: __init__.py  codeAreaAutocomplete.py  codeAreaFindTemplateVars.py  codeAreaInitializeCode.py  findEVRefs.py  parametersRequest.py  textFieldAutocomplete.py  textFieldInitializeCode.py  typeCheck.py  utils.py
backend/setta/terminals/: terminals.py  utils.py
backend/setta/utils/: constants.py  generate_memorable_string.py  generate_new_filename.py  openapi_utils.py  section_contents.py  utils.py  websocket_manager.py
constants/: BaseUITypes.json  Settings.json  constants.json  db_init.sql  defaultValues.json  settingsProject.json
frontend/: .eslintrc.js  backendStart.sh  fix_xterm.py  icons.css  index.css  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/requests/: apiSpecs.js  api_specs.js  artifacts.js  codeInfo.js  guiToYaml.js  infoToEVReferrer.js  interactive.js  jsonSource.js  lsp.js  notifications.js  pasteSections.js  projectName.js  projects.js  sectionVariants.js  sections.js  settings.js  terminals.js  utils.js  websocket.js
frontend/src/state/: definitions.js  subscriptions.js  utils.js
frontend/src/utils/: constants.js  getDescendants.js  hotReload.js  idNameCreation.js  tabbingLogic.js  utils.js
seed/examples/chat_example/: chat_example.json
tests/: autocomplete_test.py
(+517 files in other folders)
