[metadata]
name = setta
version = attr: setta.__version__
url = https://setta.dev
project_urls =
    GitHub = https://github.com/settadev/setta

[options]
packages = find:
package_dir =
    = backend
license_files = LICENSE
include_package_data = True
install_requires =
    click==8.1.3
    requests==2.28.1
    PyYAML==6.0
    websockets==11.0.3
    fastapi==0.115.4
    uvicorn==0.32.0
    docstring_parser==0.15
    pywinpty==2.0.12; platform_system == "Windows"
    ptyprocess==0.7.0; platform_system != "Windows"
    psutil==5.9.7
    basedpyright==1.25.0
    docstring-to-markdown==0.15
    black==23.7.0
    watchdog==6.0.0

[options.entry_points]
console_scripts = 
    setta = setta.start:cli

[options.packages.find]
where = backend

[options.extras_require]
dev =
    build==1.0.3
    isort==5.12.0
    flake8==6.1.0