[metadata]
name = setta
version = attr: setta.__version__
url = https://setta.dev
project_urls =
    GitHub = https://github.com/settadev/setta

[options]
packages = find:
package_dir =
    = backend
license_files = LICENSE
include_package_data = True
install_requires =
    click >= 8.1.8
    requests >= 2.32.3
    PyYAML >= 6.0.2
    websockets >= 15.0
    fastapi >= 0.115.8
    uvicorn >= 0.34.0
    docstring_parser >= 0.16
    pywinpty >= 2.0.15; platform_system == "Windows"
    ptyprocess >= 0.7.0; platform_system != "Windows"
    psutil >= 7.0.0
    basedpyright >= 1.27.1
    docstring-to-markdown >= 0.15
    black >= 25.1.0
    watchdog >= 6.0.0

[options.entry_points]
console_scripts = 
    setta = setta.start:cli

[options.packages.find]
where = backend

[options.extras_require]
dev =
    build==1.0.3
    isort==5.12.0
    flake8==6.1.0